# api

./: .env.example  Dockerfile  docker-compose.yml  pyproject.toml
app/: config.py  main.py
app/api/: garments.py  outfits.py  wardrobe.py
app/db/: supabase_client.py
app/middleware/: auth.py
app/models/: garment.py  outfit.py
app/services/: embedding.py  metadata.py  segmentation.py
app/tasks/: process_garment.py
migrations/: 001_initial.sql
tests/: conftest.py  test_garments.py  test_process_garment.py
